--- a/Alpaca/index.html
+++ b/Alpaca/index.html
@@ -7,9 +7,6 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    
 </head>
 <body>
     <div class="header">
@@ -27,6 +24,7 @@
                 <img id="neck" class="parts neck" src="./alpaca/neck/default.png" alt="neck">
                 <img id="leg" class="parts leg" src="./alpaca/leg/default.png" alt="leg">
                 <img id="accessories" class="parts accessories" src="./alpaca/accessories/headphone.png" alt="accessories">
+
             </div>
             <div class="Image-Buttons">
                 <button id="btn-random">
@@ -60,5 +58,8 @@
         
     </div>
     <script src="./index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
+    <script src="./FileSaver.js"></script>
+
 </body>
 </html>
